# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  check_file_size.py  setup.cfg  setup.py
pre_commit_hooks/: check_file_size.py
