[metadata]
name = pre_commit_hooks
version = 0.0.1
description = security related pre-commit hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DevSecOps-AppSec/pre-commit-hooks
author = Souradip Ghosh
# author_email =
# license = MIT
# license_files = LICENSE

[options.entry_points]
console_scripts =
    check-file-size = pre_commit_hooks.check_file_size:main

[bdist_wheel]
universal = True
